--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "mongodb": "^4.1.3",
+    "@types/node": "^17.0.23",
+    "firebase": "^9.6.10",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.43",
+    "typescript": "^4.6.3"
   }
 }
