--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^17.0.23",
     "firebase": "^9.6.10",
     "next": "latest",
+    "next-auth": "^4.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1"
